--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#" class="main-menu-link">Студия</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Портфолио</a>
+                    <a href="portfolio.html" class="main-menu-link">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
                     <a href="#" class="main-menu-link">Контакты</a>
