--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -40,7 +40,85 @@
     </header>
     <!-- тело -->
     <main class="main-content">
+        <!-- Фильтр -->
+        <nav>
+            <ul class="main-filters">
+                <li class="main-filters-item">
+                    <a href="#" class="main-filters-link">Все</a>
+                </li>
+                <li class="main-filters-item">
+                    <a href="#" class="main-filters-link">Веб-сайты</a>
+                </li>
+                <li class="main-filters-item">
+                    <a href="#" class="main-filters-link">Приложения</a>
+                </li>
+                <li class="main-filters-item">
+                    <a href="#" class="main-filters-link">Дизайн</a>
+                </li>
+                <li class="main-filters-item">
+                    <a href="#" class="main-filters-link">Маркетинг</a>
+                </li>
+            </ul>
+        </nav>
+        <section>
+            <ul>
+                <li>
+                    <img src="images portfolio/technocryk.jpg" alt="Пример дизайна веб-сайта">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
 
+                </li>
+                <li>
+                    <img src="images portfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/seafood.jpg" alt="Логотип рестарана Seafood">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/prime.jpg" alt="Чёрные наушники">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/boxes.jpg" alt="Две коробки">
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/borders.jpg" alt="Монитор с веб-сайтом">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/limeted.jpg"
+                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+
+                </li>
+                <li>
+                    <img src="images portfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+
+                </li>
+            </ul>
+        </section>
 
     </main>
     <!-- подвал, лого и контакты -->
