--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
 
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
 <body>
     <header>
         <!-- шапка, навигация -->
         <nav>
-            <p>
-                <a href="#">Web Studio</a>
+            <p class="logo">
+                <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
             </p>
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Студия</a>
+                    <a href="#" class="focused">Студия</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="portfolio.html" class="main-menu-link">Портфолио</a>
+                    <a href="portfolio.html" class="focused">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Контакты</a>
+                    <a href="#" class="focused">Контакты</a>
                 </li>
             </ul>
         </nav>
         <!-- шапка, контакты -->
         <ul class="main-menu-contact">
             <li class="main-menu-contact-item">
-                <a href="mailto:info@devstudio.com" class="main-menu-contact-link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
             </li>
             <li class="main-menu-contact-item">
-                <a href="tel:+380961111111" class="main-menu-contact-link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -43,9 +43,11 @@
         <!-- баннер -->
 
         <div>
-            <section class="order">
-                <h1 class="order-title">Эффективные решения для вашего бизнеса</h1>
-                <a href="#" class="main-menu-order">Заказать услугу</a>
+            <section>
+                <h1 class="order-title">Эффективные решения<br>для вашего бизнеса</h1>
+                <button class="focused-button order">
+                    <a href="#" class="main-filters-link small">Заказать услугу</a>
+                </button>
             </section>
         </div>
 
@@ -55,25 +57,25 @@
             <!-- скрыть элемент  -->
             <ul class="features-list">
                 <li class="features-list-item">
-                    <p>Внимание к деталям</p>
+                    <p class="features-uppercase">Внимание к деталям</p>
                     <span class="features-list-text">Идейные соображения, а также начало повседневной работы по
                         формированию
                         позиции.</span>
                 </li>
                 <li class="features-list-item">
-                    <p>Пунктуальность</p>
+                    <p class="features-uppercase">Пунктуальность</p>
                     <span class="features-list-text">Задача организации, в особенности же рамки и место обучения кадров
                         влечет за собой.
                     </span>
                 </li>
                 <li class="features-list-item">
-                    <p>Планирование</p>
+                    <p class="features-uppercase">Планирование</p>
                     <span class="features-list-text">Равным образом консультация с широким активом в значительной
                         степени
                         обуславливает.</span>
                 </li>
                 <li class="features-list-item">
-                    <p>Современные технологии</p>
+                    <p class="features-uppercase">Современные технологии</p>
                     <span class="features-list-text">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </span>
@@ -101,38 +103,44 @@
             <ul class="time-list">
                 <li class="team-list-item">
                     <img src="images/team1.jpg" alt="photo" width="270" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h4>Игорь Демьяненко</h4>
+                    <p class="subtitle">Product Designer</p>
                 </li>
                 <li class="team-list-item">
                     <img src="images/team2.jpg" alt="photo" width="270" />
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h4>Ольга Репина</h4>
+                    <p class="subtitle">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
                     <img src="images/team3.jpg" alt="photo" width="270" />
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h4>Николай Тарасов</h4>
+                    <p class="subtitle">Marketing</p>
                 </li>
                 <li class="team-list-item">
                     <img src="images/team4.jpg" alt="photo" width="270" />
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h4>Михаил Ермаков</h4>
+                    <p class="subtitle">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- подвал, лого и контакты -->
     <footer class="main-footer">
-        <p class="main-footer-addressbar">
-            <a href="#">Web Studio</a>
+        <p>
+            <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address>
-            <a href="mailto:info@devstudio.com" class="main-footer-addressbar-emaill">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="main-footer-addressbar-phone">+38 096 111 11 11</a>
+        <address class="main-footer-addressbar">
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+                </li>
+            </ul>
         </address>
     </footer>
 </body>
