--- a/portfolio.html
+++ b/portfolio.html
@@ -5,36 +5,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
 <body>
     <header>
         <!-- шапка, навигация -->
         <nav>
-            <p>
-                <a href="#">Web Studio</a>
+            <p class="logo">
+                <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
             </p>
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Студия</a>
+                    <a href="index.html" class="focused">Студия</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Портфолио</a>
+                    <a href="#" class="focused">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="main-menu-link">Контакты</a>
+                    <a href="#" class="focused">Контакты</a>
                 </li>
             </ul>
         </nav>
         <!-- шапка, контакты -->
         <ul class="main-menu-contact">
             <li class="main-menu-contact-item">
-                <a href="mailto:info@devstudio.com" class="main-menu-contact-link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
             </li>
             <li class="main-menu-contact-item">
-                <a href="tel:+380961111111" class="main-menu-contact-link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -44,94 +43,100 @@
         <nav>
             <ul class="main-filters">
                 <li class="main-filters-item">
-                    <a href="#" class="main-filters-link">Все</a>
+                    <button class="focused-button filter">
+                        <a href="#" class="main-filters-link">Все</a>
+                    </button>
                 </li>
                 <li class="main-filters-item">
-                    <a href="#" class="main-filters-link">Веб-сайты</a>
+                    <button class="focused-button filter">
+                        <a href="#" class="main-filters-link">Веб-сайты</a>
+                    </button>
                 </li>
                 <li class="main-filters-item">
-                    <a href="#" class="main-filters-link">Приложения</a>
+                    <button class="focused-button filter">
+                        <a href="#" class="main-filters-link">Приложения</a>
+                    </button>
                 </li>
                 <li class="main-filters-item">
-                    <a href="#" class="main-filters-link">Дизайн</a>
+                    <button class="focused-button filter">
+                        <a href="#" class="main-filters-link">Дизайн</a>
+                    </button>
                 </li>
                 <li class="main-filters-item">
-                    <a href="#" class="main-filters-link">Маркетинг</a>
+                    <button class="focused-button filter">
+                        <a href="#" class="main-filters-link">Маркетинг</a>
+                    </button>
                 </li>
             </ul>
         </nav>
         <section>
             <ul>
                 <li>
-                    <img src="images portfolio/technocryk.jpg" alt="Пример дизайна веб-сайта">
+                    <img src="imagesPortfolio/technocryk.jpg" alt="Пример дизайна веб-сайта" />
                     <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-
+                    <p class="subtitle">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="images portfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём">
+                    <img src="imagesPortfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём" />
                     <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
-
+                    <p class="subtitle">Дизайн</p>
                 </li>
                 <li>
-                    <img src="images portfolio/seafood.jpg" alt="Логотип рестарана Seafood">
+                    <img src="imagesPortfolio/seafood.jpg" alt="Логотип рестарана Seafood" />
                     <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
-
+                    <p class="subtitle">Приложение</p>
                 </li>
                 <li>
-                    <img src="images portfolio/prime.jpg" alt="Чёрные наушники">
+                    <img src="imagesPortfolio/prime.jpg" alt="Чёрные наушники" />
                     <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
-
+                    <p class="subtitle">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="images portfolio/boxes.jpg" alt="Две коробки">
+                    <img src="imagesPortfolio/boxes.jpg" alt="Две коробки" />
                     <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
-
+                    <p class="subtitle">Приложение</p>
                 </li>
                 <li>
-                    <img src="images portfolio/borders.jpg" alt="Монитор с веб-сайтом">
+                    <img src="imagesPortfolio/borders.jpg" alt="Монитор с веб-сайтом" />
                     <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
-
+                    <p class="subtitle">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="images portfolio/limeted.jpg"
-                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition">
+                    <img src="imagesPortfolio/limeted.jpg"
+                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition" />
                     <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
-
+                    <p class="subtitle">Дизайн</p>
                 </li>
                 <li>
-                    <img src="images portfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG">
+                    <img src="imagesPortfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG" />
                     <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
-
+                    <p class="subtitle">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="images portfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business">
+                    <img src="imagesPortfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business" />
                     <h3>Growing Business</h3>
-                    <p>Приложение</p>
-
+                    <p class="subtitle">Приложение</p>
                 </li>
             </ul>
         </section>
-
     </main>
     <!-- подвал, лого и контакты -->
     <footer class="main-footer">
-        <p class="main-footer-addressbar">
-            <a href="#">Web Studio</a>
+        <p>
+            <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <address>
-            <a href="mailto:info@devstudio.com" class="main-footer-addressbar-emaill">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="main-footer-addressbar-phone">+38 096 111 11 11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+                </li>
+            </ul>
         </address>
     </footer>
 </body>
