--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
+    <link rel="stylesheet" href="
+        https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
@@ -24,7 +27,7 @@
                     <a href="portfolio.html" class="focused">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="focused">Контакты</a>
+                    <a href="#contact" class="focused">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -42,11 +45,12 @@
     <main class="main-content">
         <!-- баннер -->
 
-        <div>
+        <div class="picture-banner">
             <section>
+                <img src="images/bg.jpg" alt="photo" width="1600" />
                 <h1 class="order-title">Эффективные решения<br>для вашего бизнеса</h1>
-                <button class="focused-button order">
-                    <a href="#" class="main-filters-link small">Заказать услугу</a>
+                <button class="order">
+                    <a href="#" class="main-filters-link">Заказать услугу</a>
                 </button>
             </section>
         </div>
@@ -125,20 +129,20 @@
         </section>
     </main>
     <!-- подвал, лого и контакты -->
-    <footer class="main-footer">
-        <p>
-            <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
+    <footer id="contact" class="main-footer">
+        <p class="logo">
+            <a href="#" class="logo-half"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address class="main-footer-addressbar">
+        <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contact-link-footer">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contact-link-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
