--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="
+        https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
                     <a href="#" class="focused">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#" class="focused">Контакты</a>
+                    <a href="#contact" class="focused">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -72,48 +75,51 @@
         <section>
             <ul>
                 <li>
-                    <img src="imagesPortfolio/technocryk.jpg" alt="Пример дизайна веб-сайта" />
+                    <img src="imagesPortfolio/technocryk.jpg" alt="Пример дизайна веб-сайта" width="370" height="294" />
                     <h3>Технокряк</h3>
                     <p class="subtitle">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём" />
+                    <img src="imagesPortfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём"
+                        width="370" height="294" />
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p class="subtitle">Дизайн</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/seafood.jpg" alt="Логотип рестарана Seafood" />
+                    <img src="imagesPortfolio/seafood.jpg" alt="Логотип рестарана Seafood" width="370" height="294" />
                     <h3>Ресторан Seafood</h3>
                     <p class="subtitle">Приложение</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/prime.jpg" alt="Чёрные наушники" />
+                    <img src="imagesPortfolio/prime.jpg" alt="Чёрные наушники" width="370" height="294" />
                     <h3>Проект Prime</h3>
                     <p class="subtitle">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/boxes.jpg" alt="Две коробки" />
+                    <img src="imagesPortfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
                     <h3>Проект Boxes</h3>
                     <p class="subtitle">Приложение</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/borders.jpg" alt="Монитор с веб-сайтом" />
+                    <img src="imagesPortfolio/borders.jpg" alt="Монитор с веб-сайтом" width="370" height="294" />
                     <h3>Inspiration has no Borders</h3>
                     <p class="subtitle">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="imagesPortfolio/limeted.jpg"
-                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition" />
+                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition" width="370"
+                        height="294" />
                     <h3>Издание Limited Edition</h3>
                     <p class="subtitle">Дизайн</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG" />
+                    <img src="imagesPortfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG" width="370" height="294" />
                     <h3>Проект LAB</h3>
                     <p class="subtitle">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business" />
+                    <img src="imagesPortfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business"
+                        width="370" height="294" />
                     <h3>Growing Business</h3>
                     <p class="subtitle">Приложение</p>
                 </li>
@@ -121,9 +127,9 @@
         </section>
     </main>
     <!-- подвал, лого и контакты -->
-    <footer class="main-footer">
-        <p>
-            <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
+    <footer id="contact" class="main-footer">
+        <p class="logo">
+            <a href="#" class="logo-half"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
@@ -131,10 +137,10 @@
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contact-link-footer">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contact-link-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
