--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=fallback"
-        rel="stylesheet">
-    <link rel="stylesheet" href="CSS/normalize.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=fallback"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
@@ -47,9 +47,8 @@
 
         <div class="picture-banner">
             <section>
-                <h1 class="order-title">Эффективные решения<br>для вашего бизнеса</h1>
+                <h1 class="order-title">Эффективные решения<br />для вашего бизнеса</h1>
                 <a href="#" class="button">Заказать услугу</a>
-
             </section>
         </div>
 
