--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
+    <!-- =fallback заменяем =swap не скачет шрифт-->
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=fallback"
         rel="stylesheet" />
-    <link rel="stylesheet" href="CSS/normalize.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/normalize.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <!-- шапка, контакты -->
+        <!-- шапка, контакты контакты не навигация!-->
         <ul class="main-menu contact list">
             <li class="main-menu contact item">
                 <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
